<resources>
    <string name="app_name">PICC Meeting</string>
    <string name="web_url" translatable="false">https://solutions.agora.io/meeting/web</string>
    <string name="android_url" translatable="false">https://agora-adc-artifacts.oss-cn-beijing.aliyuncs.com/apk/app-AgoraMeeting.apk</string>
    <string name="ios_url" translatable="false">https://www.pgyer.com/EUWO</string>
    <string name="request_error">Server request error: %1$d</string>
    <string name="upload_success">Upload success, please save the log number to help our troubleshooting!</string>
    <string name="clipboard">Successfully saved to clipboard</string>

    <!-- LoginFragment -->
    <string name="signal">Signal</string>
    <string name="open_camera">Open camera</string>
    <string name="open_mic">Open mic</string>
    <string name="enter_setting">Setting before entering</string>
    <string name="enter">Enter</string>
    <string name="room_name">Room name</string>
    <string name="room_pwd">Room password</string>
    <string name="name">Name</string>
    <string name="pwd_tips">• When the room already exists, you need to enter the correct password\n• When the room does not exist, the password entered will become the password of this room\n• The room can be without password</string>

    <!-- SettingFragment -->
    <string name="setting">Setting</string>
    <string name="avatar">Avatar</string>
    <string name="camera">Camera</string>
    <string name="mic">Mic</string>
    <string name="beauty">Beauty (Coming soon)</string>
    <string name="upload_log">Upload log</string>

    <!-- AboutFragment -->
    <string name="about">About</string>
    <string name="check_upgrade">Check upgrade</string>
    <string name="version_tips">Is the latest version, current version is V%1$s</string>
    <string name="new_version_tips">Not the latest version, current version is V%1$s</string>
    <string name="upgrade_title">New version found, please download</string>
    <string name="upgrade">Upgrade now</string>
    <string name="later">Later</string>
    <string name="agreement">User agreement</string>
    <string name="policy">Privacy policy</string>
    <string name="copyright" translatable="false">Copyright © 2020 OVC.</string>

    <!-- MeetingFragment -->
    <string name="router">Audio router</string>
    <string name="switcher">Switch camera</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="member">Member</string>
    <string name="chat">Chat</string>
    <string name="more">More</string>
    <string name="member_enter">"%1$s" enters</string>
    <string name="member_leave">"%1$s" leaves</string>
    <string name="restore_screen">Restore screen</string>
    <string name="board_apply_sent">Application sent</string>

    <!-- AlertDialog -->
    <string name="mute_audio_title">The host turned on the mute control</string>
    <string name="close_audio_message">You can turn on the microphone again!</string>
    <string name="disable_audio_message">You can turn on the microphone by applying!</string>
    <string name="enable_audio_title">The host turned off the mute control</string>
    <string name="enable_audio_message">Now you control the microphone by yourself!</string>
    <string name="know">I got it</string>

    <string name="apply_audio">The current conference host is set to mute. Do you want to apply to turn on the microphone?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="apply_audio_title">"%1$s" applied to turn on the microphone</string>
    <string name="apply_video_title">"%1$s" applied to turn on the camera</string>
    <string name="apply_board_title">"%1$s" applied to operate whiteboard</string>
    <string name="apply_message">Do you agree to the application?</string>
    <string name="invite_audio_title">"%1$s" invite you to turn on the microphone</string>
    <string name="invite_video_title">"%1$s" invite you to turn on the camera</string>
    <string name="invite_board_title">"%1$s" authorize you to operate the whiteboard</string>
    <string name="invite_message">Do you agree to the invitation?</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>

    <string name="accept_audio_apply_title">"%1$s" accepted your application to turn on the microphone</string>
    <string name="reject_audio_apply_title">"%1$s" rejected your application to turn on the microphone</string>
    <string name="accept_video_apply_title">"%1$s" accepted your application to turn on the camera</string>
    <string name="reject_video_apply_title">"%1$s" rejected your application to turn on the camera</string>
    <string name="accept_board_apply_title">"%1$s" accepted your application to operate the whiteboard</string>
    <string name="reject_board_apply_title">"%1$s" rejected your application to operate the whiteboard</string>
    <string name="accept_audio_invite_title">"%1$s" accepted your invitation to turn on the microphone</string>
    <string name="reject_audio_invite_title">"%1$s" rejected your invitation to turn on the microphone</string>
    <string name="accept_video_invite_title">"%1$s" accepted your invitation to turn on the camera</string>
    <string name="reject_video_invite_title">"%1$s" rejected your invitation to turn on the camera</string>
    <string name="accept_board_invite_title">"%1$s" accepted your invitation to operate the whiteboard</string>
    <string name="reject_board_invite_title">"%1$s" rejected your invitation to operate the whiteboard</string>

    <string name="close_audio_title">The host turned off your microphone</string>
    <string name="close_video_title">The host turned off your camera</string>

    <string name="mute_all_include_new">All including new participants mute</string>
    <string name="allow_self_unmute">Allow members to lift their prohibitions</string>
    <string name="cancel">Cancel</string>
    <string name="_continue">Continue</string>

    <string name="exit_title">Do you want to leave the room?</string>
    <string name="exit_message">If you do not want to interrupt the meeting, please appoint a new host before you leave</string>
    <string name="close_meeting">Close meeting</string>
    <string name="exit_meeting">Exit meeting</string>
    <string name="close_title">The meeting is over</string>

    <string name="rate">Please rate the conference call quality</string>
    <string name="submit">Submit</string>

    <!-- MemberListFragment -->
    <string name="member_title">Member (%1$d)</string>
    <string name="me">&#160;(Me)</string>
    <string name="host">&#160;(Host)</string>

    <!-- ChatFragment -->
    <string name="input_tips">Enter chat content here</string>
    <string name="send">Send</string>

    <!-- MemberSettingFragment -->
    <string name="member_setting">Member setting</string>

    <!-- ActionSheetFragment -->
    <string name="invite">Invite</string>
    <string name="mute_all">Mute all</string>
    <string name="unmute_all">Unmute all</string>
    <string name="record">Record</string>
    <string name="open_board">Open whiteboard interaction</string>
    <string name="close_board">Close whiteboard interaction</string>
    <string name="apply_board">Apply for whiteboard interaction</string>

    <string name="mute_audio">Mute audio</string>
    <string name="unmute_audio">Unmute audio</string>
    <string name="close_video">Close video</string>
    <string name="open_video">Open video</string>
    <string name="set_host">Set as host</string>
    <string name="authorize_board">Authorize whiteboard authority</string>
    <string name="cancel_board">Withdraw whiteboard authority</string>
    <string name="kick_out">Kick out</string>

    <!-- InviteFragment -->
    <string name="meeting_name">Meeting name: %1$s</string>
    <string name="meeting_pwd">Meeting password: %1$s</string>
    <string name="invited_by">Invited by: %1$s</string>
    <string name="web_link">Web link: %1$s</string>
    <string name="android_link">Android link: %1$s</string>
    <string name="ios_link">iOS link: %1$s</string>
    <string name="copy_meeting_info">Copy meeting information</string>

    <string name="open_screen">Open screen share</string>
    <string name="close_screen">Close screen share</string>

</resources>
