<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="io.agora.meeting.viewmodel.PreferenceViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".fragment.nav.LoginFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:logo="@drawable/ic_logo_little"
            app:menu="@menu/fragment_login"
            app:title="@string/app_name"
            app:titleTextColor="@color/gray_808fa3" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_30">

                <EditText
                    android:id="@+id/et_room_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_44"
                    android:background="@drawable/sel_et_bg"
                    android:ems="10"
                    android:hint="@string/room_name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/dp_12"
                    android:textColor="@color/black_2e3848"
                    android:textColorHint="@color/gray_6d7278"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_room_pwd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_44"
                    android:background="@drawable/sel_et_bg"
                    android:ems="10"
                    android:hint="@string/room_pwd"
                    android:inputType="textVisiblePassword"
                    android:paddingHorizontal="@dimen/dp_12"
                    android:textColor="@color/black_2e3848"
                    android:textColorHint="@color/gray_6d7278"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_room_name" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_44"
                    android:background="@drawable/sel_et_bg"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/dp_12"
                    android:saveEnabled="false"
                    android:text="@={viewModel.name}"
                    android:textColor="@color/black_2e3848"
                    android:textColorHint="@color/gray_6d7278"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_room_pwd" />

                <TextView
                    android:id="@+id/tv_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/enter_setting"
                    android:textColor="@color/gray_989898"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_name" />

                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_12"
                    android:text="@string/open_camera"
                    android:textColor="@color/gray_323c47"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

                <Switch
                    android:id="@+id/sw_camera"
                    android:layout_width="88dp"
                    android:layout_height="23dp"
                    android:checked="@={viewModel.camera}"
                    android:saveEnabled="false"
                    android:text="@null"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_camera" />

                <TextView
                    android:id="@+id/tv_mic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_12"
                    android:text="@string/open_mic"
                    android:textColor="@color/gray_323c47"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_camera" />

                <Switch
                    android:id="@+id/sw_mic"
                    android:layout_width="88dp"
                    android:layout_height="23dp"
                    android:checked="@={viewModel.mic}"
                    android:saveEnabled="false"
                    android:text="@null"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_mic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_mic" />

                <Button
                    android:id="@+id/btn_enter"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_42"
                    android:layout_marginTop="@dimen/dp_34"
                    android:background="@color/blue_4da1ff"
                    android:onClick="@{clickListener}"
                    android:text="@string/enter"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mic" />

                <ImageButton
                    android:id="@+id/btn_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{clickListener}"
                    android:src="@drawable/ic_tips"
                    app:layout_constraintBottom_toBottomOf="@+id/et_room_pwd"
                    app:layout_constraintEnd_toEndOf="@+id/et_room_pwd"
                    app:layout_constraintTop_toTopOf="@+id/et_room_pwd" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>