<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.agora.meeting.BuildConfig" />

        <variable
            name="viewModel"
            type="io.agora.meeting.viewmodel.CommonViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".fragment.nav.AboutFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:title="@string/about"
                app:titleTextColor="@color/black_030303" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_600">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/app_name"
                    android:textColor="@color/gray_808fa3"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_90"
                    android:layout_marginTop="@dimen/dp_80"
                    android:src="@drawable/ic_logo_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@{viewModel.appVersion.forcedUpgrade == 0 ? @string/version_tips(BuildConfig.VERSION_NAME) : @string/new_version_tips(BuildConfig.VERSION_NAME)}"
                    android:textColor="@color/black_2e3848"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:background="@color/blue_00a8ff"
                    android:onClick="@{() -> viewModel.checkVersion(false)}"
                    android:text="@string/check_upgrade"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

                <TextView
                    android:id="@+id/tv_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_50"
                    android:text="@string/copyright"
                    android:textColor="@color/gray_989898"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/tv_copyright"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tv_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{clickListener}"
                        android:text="@string/agreement"
                        android:textColor="@color/black_2e3848"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_13"
                        android:onClick="@{clickListener}"
                        android:text="@string/policy"
                        android:textColor="@color/black_2e3848"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>